winryrockbell/dots/.config/xmonad/xmobarrc.errors

xmobarrc.hs:90:46: warning: [-Wtabs]
    Tab character found here, and in two further locations.
    Please use spaces instead.
   |
90 |                                        , "-o"   , "<left>% (<timeleft>)"
   |                                              ^^^

xmobarrc.hs:98:77: error:
    lexical error in string/character literal at character '['
   |
98 |         , Run MPD            [ "--template" , "<state>: <artist> - <title> \[<mm>:<length>)"\]
   |                                                                             ^
